<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app strings -->
    <string name="app_name">PMeals</string>
    <string name="version">1.2.0</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_viewbymeal">PMeals</string>
    <string name="title_activity_viewbylocation">PMeals</string>
    <string name="title_activity_meal_searcher">Search Meals</string>
    <string name="title_activity_reorderlocations">Set dining hall display order</string>
    <string name="title_activity_widgetconfigurator">Configure widget</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_managealerts">Manage alerts</string>
    <string name="title_activity_setupnewalert">Setup new alert</string>

    <!-- about dialog -->
    <string name="app_info">An app for downloading, storing, and nicely displaying dining menus at Princeton University.</string>
    <string name="credits_categories">App Design\nStrategy Consultant\nCoding\nIcons</string>
    <string name="credits_authors">Brian Tu, David Zhao\nSophia Xing\nBrian Tu\nDavid Zhao</string>

    <!-- search widget -->
    <string name="search">Search meals</string>
    <string name="searchHint">Search meals</string>
    <string name="searching">Searching</string>

    <!-- widget -->
    <string name="widgetconfig_instr">Select the location you would like to display</string>

    <!-- misc -->
    <string name="loading">Loading&#8230;</string>

    <!-- alert manager -->
    <string name="addalert">Add alert</string>
    <string name="no_alerts">No alerts</string>
    <string name="alertquery_prompt">Alert query</string>
    <string name="alertquery_hint">Phrase to match in menu item</string>
    <string name="alerttime_prompt">Alert times</string>
    <string name="alertdow_prompt">Days to alert (tap to select)</string>
    <string name="sunday_abbrev">Sun</string>
    <string name="monday_abbrev">Mon</string>
    <string name="tuesday_abbrev">Tues</string>
    <string name="wednesday_abbrev">Wed</string>
    <string name="thursday_abbrev">Thu</string>
    <string name="friday_abbrev">Fri</string>
    <string name="saturday_abbrev">Sat</string>
    <string name="alertlocs_prompt">Locations to alert</string>
    <string name="selectdininghalls">Dining halls</string>
    <string name="selectall">All</string>
    <string name="selectnone">None</string>
    <string name="addalerttime">+ Add alert time</string>
    <string name="alerttime_mealprompt">Meal:</string>

    <!-- context menu -->
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="search_meals">Search meals</string>
    <string name="make_alert">Make into alert</string>
    <string name="search_online">Search online</string>

    <!-- preference strings -->
    <string name="pref_reorderLocsTitle">Dining hall display order</string>
    <string name="pref_startupShowKey">startupShowId</string>
    <string name="pref_startupShowTitle">Startup location</string>
    <string name="pref_managealertsTitle">@string/title_activity_managealerts</string>
    <string name="about">About</string>
    <string name="aboutSummary">@string/version</string>
    <string name="deleteSearchHistoryTitle">Delete search history</string>
    <string name="deleteSearchHistoryText">Your search history will be deleted.</string>
    <string name="reorder_instr">Click and drag to reorder</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="feedback">Contact developer</string>
    <string name="feedbackSummary">Feedback, bugs, comments, or anything else!</string>
    <string name="giveRatingTitle">Rate this app!</string>
    <string name="giveRatingSummary">Go to Android Marketplace</string>

    <!-- First time dialog strings -->
    <string name="firsttime1">Thanks for downloading PMeals! Here are some tips to help you use the app.</string>
    <string name="firsttime2">&#8226; Swipe left and right to view additional menus/days.</string>
    <string name="firsttime3">&#8226; NEW: You can view non-dining hall locations now; look under the menu.</string>
    <string name="firsttime4">&#8226; Each menu item will have anywhere from 0 to 3 bars on its right side. Here\'s what they mean:</string>
    <string name="legend1">Vegan</string>
    <string name="legend2">Vegetarian</string>
    <string name="legend3">Contains pork</string>
    <string name="legend4">Contains nuts</string>
    <string name="firsttime5">&#8226; Add a widget to your desktop to show current meal for the location of your choice (max 1).</string>

</resources>