<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- alert query -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="6dp"
            android:text="@string/alertquery_prompt"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/alertquery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alertquery_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp" />

        <!-- time picker -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/alerttime_prompt"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <com.sleepykoala.pmeals.data.ScrollableTimePicker
                android:id="@+id/alerttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- repeat days -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="selectDays"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/alertdow_prompt"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="selectDays"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp" >

            <TextView
                android:id="@+id/sunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunday_abbrev"
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/monday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monday_abbrev"
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/tuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuesday_abbrev"
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wednesday_abbrev"
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/thursday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thursday_abbrev"
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/friday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friday_abbrev"
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/saturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saturday_abbrev"
                android:textColor="@color/dark_gray" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr" />

        <!-- locations container -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:text="@string/alertlocs_prompt"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr" />

        <LinearLayout
            android:id="@+id/alertlocs_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:divider="@color/light_gray"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="left"
                android:onClick="selectDiningHalls"
                android:text="@string/selectdininghalls"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="selectAll"
                android:text="@string/selectall"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="selectNone"
                android:text="@string/selectnone"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr" />

        <LinearLayout
            android:id="@+id/alertlocs_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp" >
        </LinearLayout>

        <!-- buttons -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/hr" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/light_gray"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="create"
                android:src="@drawable/ic_accept" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:onClick="cancel"
                android:src="@drawable/ic_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>