<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    >
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="15sp"
	    android:textColor="@android:color/white"
        android:text="@string/firsttime1"
        />
    <ImageView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:src="@drawable/hr"
        />
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="14sp"
	    android:textColor="@android:color/white"
        android:text="@string/firsttime2"
	    android:paddingBottom="4dp"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="14sp"
	    android:textColor="@android:color/white"
        android:text="@string/firsttime3"
	    android:paddingBottom="4dp"
        />
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="14sp"
	    android:textColor="@android:color/white"
        android:text="@string/firsttime4"
        />
    <LinearLayout
        android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        >
	        
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:textSize="14sp"
		    android:textColor="@android:color/white"
	        android:text="@string/legend1"
	        />
	    
	    <ImageView
	        android:layout_width="6dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/vegan"
	        />
	
	    <ImageView
	        android:layout_width="7dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/foodinfo_outline"
	        />
	    
	    <ImageView
	        android:layout_width="7dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/foodinfo_outline"
	        />
		    
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        >
	        
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:textSize="14sp"
		    android:textColor="@android:color/white"
	        android:text="@string/legend2"
	        />
	    
	    <ImageView
	        android:layout_width="6dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/vegetarian"
	        />
	
	    <ImageView
	        android:layout_width="7dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/foodinfo_outline"
	        />
	    
	    <ImageView
	        android:layout_width="7dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/foodinfo_outline"
	        />
		    
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        >
	        
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:textSize="14sp"
		    android:textColor="@android:color/white"
	        android:text="@string/legend3"
	        />
	    
	    <ImageView
	        android:layout_width="7dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/foodinfo_outline"
	        />
	    
	    <ImageView
	        android:layout_width="6dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/pork"
	        />
	
	    <ImageView
	        android:layout_width="7dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/foodinfo_outline"
	        />
		    
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        >
	        
	    <TextView
	        android:layout_height="wrap_content"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:textSize="14sp"
		    android:textColor="@android:color/white"
	        android:text="@string/legend4"
	        />
	    
	    <ImageView
	        android:layout_width="7dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/foodinfo_outline"
	        />
	    
	    <ImageView
	        android:layout_width="7dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/foodinfo_outline"
	        />
		    
	    <ImageView
	        android:layout_width="6dp"
	        android:layout_height="wrap_content"
	        android:paddingRight="1dp"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/nuts"
	        />
	
    </LinearLayout>
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="14sp"
	    android:textColor="@android:color/white"
        android:text="@string/firsttime5"
	    android:paddingTop="4dp"
        />
    
</LinearLayout>