<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/app_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:gravity="center_horizontal"
	    android:textColor="@android:color/white"
        android:textSize="25sp"
        android:text="@string/app_name"
        />
    
    <TextView
        android:id="@+id/version"
        android:layout_below="@id/app_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:textColor="@android:color/white"
        android:textSize="15sp"
	    android:text="@string/version"
        />
        
    <ImageView
        android:id="@+id/hr1"
        android:layout_below="@id/version"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="15dp"
	    android:paddingBottom="15dp"
	    android:src="@drawable/hr"
        />
    
    <TextView
        android:id="@+id/app_info"
        android:layout_below="@id/hr1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text='@string/app_info'
        />
    
    <ImageView
        android:id="@+id/hr2"
        android:layout_below="@id/app_info"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="15dp"
	    android:paddingBottom="15dp"
	    android:src="@drawable/hr"
        />
    
    <TextView
        android:id="@+id/credits_categories"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/hr2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
        android:textSize="12sp"
        android:text="@string/credits_categories"
        />

    <TextView
        android:id="@+id/credits_authors"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hr2"
        android:layout_toRightOf="@id/credits_categories"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:textColor="@android:color/white"
        android:textSize="12sp"
        android:text="@string/credits_authors"
        />

</RelativeLayout>